@@ -2,7 +2,6 @@
 - comments editing
 - catalogs manager
 - translation memory (a dat echo Kubonovi)
-- UTF-8
 - handling of POT files (as an alternative to home-grown scanning)
 - configurable file extension of .mo file (.gmo)
 - progress bar (percentage of translated messgaes)
