@@ -78,21 +78,21 @@
                   <object class="wxComboBox" name="charset">
                     <content>
                       <item>utf-8</item>
-                      <item>iso8859-1</item>
-                      <item>iso8859-2</item>
-                      <item>iso8859-3</item>
-                      <item>iso8859-4</item>
-                      <item>iso8859-5</item>
-                      <item>iso8859-6</item>
-                      <item>iso8859-7</item>
-                      <item>iso8859-8</item>
-                      <item>iso8859-9</item>
-                      <item>iso8859-10</item>
-                      <item>iso8859-11</item>
-                      <item>iso8859-12</item>
-                      <item>iso8859-13</item>
-                      <item>iso8859-14</item>
-                      <item>iso8859-15</item>
+                      <item>iso-8859-1</item>
+                      <item>iso-8859-2</item>
+                      <item>iso-8859-3</item>
+                      <item>iso-8859-4</item>
+                      <item>iso-8859-5</item>
+                      <item>iso-8859-6</item>
+                      <item>iso-8859-7</item>
+                      <item>iso-8859-8</item>
+                      <item>iso-8859-9</item>
+                      <item>iso-8859-10</item>
+                      <item>iso-8859-11</item>
+                      <item>iso-8859-12</item>
+                      <item>iso-8859-13</item>
+                      <item>iso-8859-14</item>
+                      <item>iso-8859-15</item>
                       <item>koi8-r</item>
                       <item>windows-1250</item>
                       <item>windows-1251</item>
