@@ -3,6 +3,9 @@ Version 1.1.0
 -------------
 (this is 1st version of new development series)
 
+- support for UTF-8
+- changes to make poEdit work correctly with gettext 0.10.37
+- fixed default ISO charset names to be iso-8859-n instead of iso8859-n
 - new ability to save catalogs in all common CR/LF formats, plus
   an option to preserve file's format (default values: Unix and preserve)
 - added fullscreen mode
